<resources>
    <string name="app_name">IMG2PDF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IMG2PDF</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Edit Copy</string>

    <string name="menu_share_app_with_friends">Share app with friends</string>
    <string name="menu_contact_support">Contact support</string>
    <string name="menu_rate_app">Rate app</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_tutorial">Help Tutorial</string>
    <string name="alert_dialog_message">Sending LOG, will help us to identify app issues and provide you with best solution.</string>
</resources>